--- a/popup/style.css
+++ b/popup/style.css
@@ -2,7 +2,16 @@ body{
 	margin: 0;
 }
 
+iframe{
+	border-style: none;
+	width: 200px;
+	height: 80px;
+	vertical-align: top;
+	overflow: hidden;
+}
+
 .wrap{
+	margin-top: -12px;
 	width: 200px;
 }
 
@@ -22,7 +31,7 @@ body{
 	display: block;
 	position: absolute;
 	top: 2px;
-	right: 2px;	/* ヘルプボタンを表示するなら30px */
+	right: 2px;
 	width: 24px;
 	height: 24px;
 	border: 1px solid #779bc8;
@@ -30,27 +39,7 @@ body{
 	background: #ffffff url('reflesh.png') 4px 4px no-repeat;
 }
 
-/*
-.header a#help{
-	display: block;
-	position: absolute;
-	top: 2px;
-	right: 2px;
-	width: 24px;
-	height: 24px;
-	border: 1px solid #779bc8;
-	border-radius: 12px;
-	color: #1dace0;
-	font-weight: bold;
-	font-size: 16px;
-	text-align: center;
-	line-height: 26px;
-	text-decoration: none;
-	background: #ffffff;
-}
-*/
-
-.header a:hover{
+.header a#reflesh:hover{
 	background-color: #85c7df !important;
 }
 
