--- a/popup/style.css
+++ b/popup/style.css
@@ -1,63 +1,171 @@
+:root {
+	--color-background: #ffffff;
+	--color-background2: #dbe3e7;
+	--color-main: #779bc8;
+	--color-main2: #a7d3e3;
+	--color-main3: #e8f5f8;
+	--color-button: #ffffff;
+	--color-button-hover: #85c7df;
+	--color-text-main: #666666;
+	--color-text-reversal: #ffffff;
+}
+
 body{
-	margin: 0;
-}
-
-iframe{
-	border-style: none;
-	width: 200px;
-	height: 80px;
-	vertical-align: top;
-	overflow: hidden;
-}
-
-.wrap{
-	margin-top: -12px;
-	width: 200px;
-}
-
-.header{
 	position: relative;
-	background: #779bc8;
-	color: #ffffff;
-	font-size: 12px;
+	margin: 0;
+	width: 700px;
+	background: var(--color-background2);
+}
+
+/* -------- header -------- */
+.header{
+	z-index: 65535;
+	position: relative;
 	height: 30px;
+	background: var(--color-main);
+	font-size: 12px;
+	color: var(--color-text-reversal);
 }
 
 .header p{
-	line-height: 30px;
+	position: absolute;
+	top: -6px;
+	left: 64px;
 }
 
-.header a#reflesh{
+.header a.circle{
 	display: block;
 	position: absolute;
 	top: 2px;
-	right: 2px;
 	width: 24px;
 	height: 24px;
-	border: 1px solid #779bc8;
+	border: 1px solid var(--color-button-hover);
 	border-radius: 12px;
-	background: #ffffff url('reflesh.png') 4px 4px no-repeat;
 }
 
-.header a#reflesh:hover{
-	background-color: #85c7df !important;
+.header a.circle:hover{
+	background-color: var(--color-button-hover) !important;
 }
 
-ul{
+.header a#reflesh{
+	left: 2px;
+	background: var(--color-button) url('reflesh.png') 4px 4px no-repeat;
+}
+
+.header a#help{
+	left: 32px;
+	background: var(--color-background);
+	color: #1dace0;
+	font: bold 18px sans-serif;
+	text-align: center;
+	line-height: 25px;
+	text-decoration: none;
+}
+
+.header a#tasks_switch{
 	display: block;
+	position: absolute;
+	top: 4px;
+	right: 2px;
+	padding: 0 6px;
+	color: var(--color-main);
+	font: bold 14px sans-serif;
+	text-decoration: none;
+	border: 1px solid var(--color-button-hover);
+	border-radius: 12px;
+	background: var(--color-button);
+}
+
+.header a#tasks_switch:hover{
+	background: var(--color-button-hover);
+}
+
+
+/* -------- calender -------- */
+#calender{
+	float: left;
+	position: relative;
+	width: 500px;
+	height: 400px;
+}
+
+#calender .course{
+	width: 80px;
+	height: 52px;
+	padding: 4px;
+	overflow: hidden;
+	font-size: 11px;
+	user-select: none;
+	cursor: pointer;
+	border-radius: 8px;
+}
+
+#calender_table{
+	table-layout: fixed;
+	border-spacing: 3px;
+	background: var(--color-background2);
+}
+
+#calender_table th{
+	font-size: 12px;
+}
+
+#calender_table td{
+	padding: 0;
+	width: 88px;
+	height: 60px;
+}
+
+#calender_table .course{
+	background: var(--color-main);
+}
+
+#calender_table div.dragtarget, #calender_table div.dragging{
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	border: 2px dashed var(--color-background);
+	border-radius: 8px;
+	background: var(--color-background);
+}
+
+#calender_courses{
+	margin: -1px 1px -1px -1px;
+	padding: 0 6px 3px;
+	border: 2px dashed var(--color-background2);
+	overflow-x: scroll;
+}
+
+#calender_courses > div{
+	padding: 0;
+}
+
+#calender_courses .course{
+	float: left;
+	margin: 0 8px;
+	background: var(--color-main2);
+}
+
+.dragging{
+	background: var(--color-main3);
+	border-color: var(--color-main1) !important;
+}
+
+/* -------- tasks -------- */
+ul{
+	width: 200px;
+	max-height: 400px;
 	margin: -3px 0 0;
 	padding: 0;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	background: var(--color-background);
 }
 
-ul.marked{
-	background: #dbe3e7;
-}
-
-ul.marked + ul{
+ul#tasks_submitted{
+	background: var(--color-background2);
 	display: none;
 }
-
 
 li{
 	position: relative;
@@ -65,71 +173,84 @@ li{
 	height: 60px;
 	margin-top: 2px;
 	cursor: pointer;
-	border-left: 4px solid #779bc8;
-	border-top: 1px solid #779bc8;
+	border-left: 4px solid var(--color-main);
+	border-top: 1px solid var(--color-main);
 }
 
-li span:first-child{
-	display: block;
+li p{
+	margin: 0;
 	padding-left: 2px;
-	color: #333;
+	color: var(--color-text-main);
 	width: 600px;
 	font: bold 14px sans-serif;
 }
 
-li span:nth-child(2){
+li.expired p{
+	color: #ed7576;
+}
+
+li span{
 	display: block;
 	margin-left: 12px;
 	font-size: 12px;
 	width: 600px;
-	color: #666;
+	color: var(--color-text-main);
 }
 
-li.expired span:first-child{
-	color: #ed7576;
+ul#tasks_submitted li span:nth-child(3)::before{
+	content: "提出済: ";
 }
 
 li a{
 	display: block;
 	position: absolute;
-	top: 6px;
+	top: 20px;
 	right: 6px;
 	width: 24px;
 	height: 24px;
-	border: 1px solid #ccdbe0;
+	border: 1px solid var(--color-button-hover);
 	border-radius: 12px;
-	color: #B6BCC0;
+	color: var(--color-button-hover);
 	font-weight: bold;
 	text-align: center;
 	line-height: 23px;
 	text-decoration: none;
+	background: var(--color-background);
 }
 
 li a:hover{
-	background: #eff3f5;
+	background: var(--color-background2);
 }
 
-li.button{
-	position: relative;
-	border: none;
-	height: 20px;
-	padding: 4px;
-	background: #b0d8e7;
-}
-
-li.button:hover{
-	background: #85c7df;
-}
-
-li.button span:first-child{
-	color: #666;
-}
-
-li.button span:nth-child(2){
-	display: block;
+li div{
 	position: absolute;
-	top: 1px;
-	right: 8px;
-	font: bold 16px sans-serif;
-	color: #779bc8;
+	bottom: -1px;
+	right: 2px;
+	padding: 0 4px;
+	color: var(--color-main);
+	font-size: 8px;
+	border: 1px solid var(--color-main);
+	border-radius: 8px;
+	background: var(--color-background);
+}
+
+
+/* -------- footer -------- */
+#footer{
+	position: absolute;
+	top: 428px;
+	width: 100%;
+	padding: 4px 0;
+	height: 60px;
+	background: var(--color-main);
+}
+
+iframe{
+	display: block;
+	margin: 0 auto;
+	width: 468px;
+	height: 60px;
+	vertical-align: top;
+	border-style: none;
+	overflow: hidden;
 }
