--- a/popup/style.css
+++ b/popup/style.css
@@ -1,13 +1,12 @@
 :root {
-	--color-background: #ffffff;
+	--color-background1: #ffffff;
 	--color-background2: #dbe3e7;
-	--color-main: #779bc8;
+	--color-main1: #779bc8;
 	--color-main2: #a7d3e3;
 	--color-main3: #e8f5f8;
 	--color-button: #ffffff;
 	--color-button-hover: #85c7df;
 	--color-text-main: #666666;
-	--color-text-reversal: #ffffff;
 }
 
 body {
@@ -17,29 +16,20 @@ body {
 
 .wrap {
 	display: flex;
-	height: 400px;
+	height: 388px;
 }
 
-/* -------- common -------- */
 .header {
 	display: flex;
+	align-items: center;
 	height: 30px;
-	background: var(--color-main);
-	position: relative;
+	padding: 0 4px;
 	font-size: 12px;
-	color: var(--color-text-reversal);
+	color: #ffffff;
+	background: var(--color-main1);
 }
 
-.header p {
-	margin: 0;
-	vertical-align: bottom;
-}
-
-.header p a {
-	color: #fff;
-}
-
-.header a.refresh {
+.header a#tasks_reflesh {
 	display: block;
 	margin: 2px;
 	width: 24px;
@@ -49,82 +39,152 @@ body {
 	background: var(--color-button) url('reflesh.png') 4px 4px no-repeat;
 }
 
-.header a.refresh:hover {
+.header a#tasks_reflesh:hover {
 	background-color: var(--color-button-hover) !important;
 }
 
-
-
-/* -------- footer -------- */
-#footer {
-	padding: 4px 0;
-	height: 60px;
-	background: var(--color-main);
+.header a.button {
+	display: block;
+	margin-right: 4px;
+	padding: 0 6px;
+	color: var(--color-main1);
+	font: bold 14px sans-serif;
+	text-decoration: none;
+	border: 1px solid var(--color-button-hover);
+	border-radius: 12px;
+	background: var(--color-button);
 }
 
-iframe {
+.header a.button:hover{
+	background: var(--color-button-hover);
+}
+
+.header #calender_buttons a {
+	display: inline-block;
+	margin: 0 0 1px 8px;
+	padding: 2px 6px;
+	font-size: 14px;
+	text-decoration: none;
+	color: var(--color-text-main);
+	border-radius: 4px;
+	background: var(--color-background2);
+}
+
+.header #calender_buttons a.selected {
+	background: var(--color-main2);
+}
+
+.footer {
+	padding: 4px 0;
+	background: var(--color-main1);
+}
+
+.footer iframe {
 	display: block;
 	margin: 0 auto;
 	width: 468px;
 	height: 60px;
-	vertical-align: top;
 	border-style: none;
 	overflow: hidden;
 }
 
+
 /* -------- calender -------- */
 #calender {
 	width: 500px;
-	table-layout: fixed;
-	border-collapse: collapse;
-	background: var(--color-background);
 }
 
 #calender th {
 	font-size: 11px;
-	width: 40px;
-	height: 60px;
-	background: var(--color-background2);
+	text-align: center;
 }
 
 #calender td {
-	height: 55px;
+	width: 88px;
+	height: 60px;
+	padding: 0;
+	background: var(--color-background1);
 }
 
-#calender td span {
-	vertical-align: middle;
-	display: block;
-	height: 49px;
-	padding: 3px;
-	background: #dbe3e7;
-	border-radius: 8px;
+.calender_other_wrap {
+	display: flex;
+	width: 500px;
+}
+
+.calender_other_wrap h2 {
+	display: table-cell;
+	margin: 0 0 0 2px;
+	width: 44px;
+	padding: 20px 1px;
 	font-size: 11px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+#calender_other {
+	display: flex;
+	width: 450px;
+	overflow-x: scroll;
+}
+
+#calender_other div {
+	margin-left: 1px;
+}
+
+#calender td div, #calender_other div div {
+	box-sizing: border-box;
+	width: 88px;
+	height: 60px;
+	vertical-align: middle;
+	padding: 3px;
+	font-size: 11px;
+	background: var(--color-background1);
+}
+
+#calender td div.t2, #calender_other div div.t2 {
+	background: var(--color-main2);
+}
+
+#calender td div p, #calender_other div div p {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	margin: 0;
+	height: 36px;
+	overflow: hidden;
+}
+
+#calender td div span, #calender_other div div span {
+	display: block;
+	white-space: nowrap;
+	height: 15px;
+	border-radius: 4px;
+	padding: 1px 4px;
+	background: var(--color-main3);
 }
 
 /* -------- tasks -------- */
-#tasks, #tasks_submitted {
+#tasks {
 	width: 200px;
-	max-height: calc(100% - 28px); /* header分を引く */
-	margin: -3px 0 0;
-	padding: 0 0 1px;
+	max-height: calc(100% - 2px);
+	margin: 2px 0 0;
+	padding: 0;
 	overflow-x: hidden;
 	overflow-y: scroll;
-	background: var(--color-background);
-}
-
-ul#tasks_submitted {
-	background: var(--color-background2);
-	display: none;
+	background: var(--color-background1);
 }
 
 li {
 	position: relative;
 	display: block;
-	height: 60px;
-	margin-top: 2px;
+	height: 61px;
 	cursor: pointer;
-	border-left: 4px solid var(--color-main);
-	border-top: 1px solid var(--color-main);
+	border-left: 4px solid var(--color-main1);
+	border-bottom: 1px solid var(--color-main1);
+}
+
+li:last-child {
+	border-bottom: 1px solid var(--color-background2);
 }
 
 li p {
@@ -139,16 +199,20 @@ li.expired p {
 	color: #ed7576;
 }
 
+li.submitted {
+	background: var(--color-background2);
+}
+
+li.submitted span:nth-child(3)::before {
+	content: "提出済: ";
+}
+
 li span {
 	display: block;
 	margin-left: 12px;
 	font-size: 12px;
 	width: 600px;
 	color: var(--color-text-main);
-}
-
-ul#tasks_submitted li span:nth-child(3)::before {
-	content: "提出済: ";
 }
 
 li a {
@@ -165,7 +229,7 @@ li a {
 	text-align: center;
 	line-height: 23px;
 	text-decoration: none;
-	background: var(--color-background);
+	background: var(--color-background1);
 }
 
 li a:hover {
@@ -177,26 +241,10 @@ li div {
 	top: 2px;
 	right: 2px;
 	padding: 0 4px;
-	color: var(--color-main);
+	color: var(--color-main1);
 	font-size: 8px;
-	border: 1px solid var(--color-main);
+	border: 1px solid var(--color-main1);
 	border-radius: 8px;
-	background: var(--color-background);
+	background: var(--color-background1);
 }
-
-.header a#tasks_switch {
-	display: block;
-	padding: 0 6px;
-	color: var(--color-main);
-	font: bold 14px sans-serif;
-	text-decoration: none;
-	border: 1px solid var(--color-button-hover);
-	border-radius: 12px;
-	background: var(--color-button);
-}
-
-.header a#tasks_switch:hover{
-	background: var(--color-button-hover);
-}
-
 
