--- a/popup/style.css
+++ b/popup/style.css
@@ -36,7 +36,7 @@ body {
 	height: 24px;
 	border: 1px solid var(--color-button-hover);
 	border-radius: 12px;
-	background: var(--color-button) url('reflesh.png') 4px 4px no-repeat;
+	background: var(--color-button) url(reflesh.png) 4px 4px no-repeat;
 }
 
 .header a#tasks_reflesh:hover {
@@ -79,6 +79,16 @@ body {
 	background: var(--color-main1);
 }
 
+.footer p {
+	margin: 4px 0 0;
+	text-align: center;
+}
+
+.footer p a {
+	margin: 0 16px;
+	color: #fff;
+}
+
 .footer iframe {
 	display: block;
 	margin: 0 auto;
@@ -88,6 +98,14 @@ body {
 	overflow: hidden;
 }
 
+#loading {
+	position: absolute;
+	top: 30px;
+	width: 100%;
+	height: 388px;
+	background: rgba(0, 0, 0, 0.3) url(loading.gif) 50% 50% no-repeat;
+	display: none;
+}
 
 /* -------- calender -------- */
 #calender {
